--- a/pom.xml
+++ b/pom.xml
@@ -55,18 +55,26 @@
 			</plugin>
 
 			<plugin>
-				<groupId>com.jolira</groupId>
-				<artifactId>onejar-maven-plugin</artifactId>
-				<version>1.4.4</version>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<version>2.6</version>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>com.ylw.requestviewer.MainApp</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+					<encoding>UTF-8</encoding>
+				</configuration>
 				<executions>
 					<execution>
-						<configuration>
-							<attachToBuild>true</attachToBuild>
-							<classifier>onejar</classifier>
-							<encoding>UTF-8</encoding>
-						</configuration>
+						<id>make-assembly</id>
+						<phase>package</phase>
 						<goals>
-							<goal>one-jar</goal>
+							<goal>single</goal>
 						</goals>
 					</execution>
 				</executions>
